added some simple methods used in tests